add full functionality

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <label for="search">Type a github user handle:</label>
       <input type="text" id="search" name="search" required>
     </form>
-    <div class="repos"></div>
+    <div class="repos">
+      <p></p>
+    </div>
   </main>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
   <script type="text/javascript" src="main.js"></script>
